docs: fix broken link

--- a/libs/documentations/docs/core/store.mdx
+++ b/libs/documentations/docs/core/store.mdx
@@ -10,7 +10,7 @@ All `NgtInstance` injects `NgtStore` so all NGT objects essentially have access 
 
 ## Accessing states
 
-`NgtStore` is a [`NgtComponentStore`]('./component-store') so there are both Reactive and Imperative approaches to access the state.
+`NgtStore` is a [`NgtComponentStore`](./component-store) so there are both Reactive and Imperative approaches to access the state.
 
 ### Reactively
 
