--- a/libs/documentations/docs/first-scene.mdx
+++ b/libs/documentations/docs/first-scene.mdx
@@ -11,7 +11,7 @@ This basic tutorial will help us setup our first Angular Three scene and introdu
 
 :::note
 
-This tutorial assumes basic knowledge of [Angular](https://angular.io)
+This tutorial assumes basic knowledge of [Angular](https://angular.io) and [THREE.js](https://threejs.org)
 
 :::
 
