--- a/libs/documentations/docs/core/component-store.mdx
+++ b/libs/documentations/docs/core/component-store.mdx
@@ -4,8 +4,219 @@ title: ComponentStore
 sidebar_label: ComponentStore
 ---
 
-`NgtComponentStore` is a modified version of [NgRx Component Store](https://ngrx.io/guide/component-store). The API is almost identical to `@ngrx/component-store`
-with the following differences:
+`NgtComponentStore` is a modified version of [NgRx Component Store](https://ngrx.io/guide/component-store).
+
+## Usage
+
+### Setting up
+
+There are two approaches to set up `NgtComponentStore` in our custom component. First approach is to extend `NgtComponentStore`.
+
+```ts
+@Component({
+    /* ... */
+})
+export class CubeComponent extends NgtComponentStore {}
+```
+
+Second approach is to provide `NgtComponentStore`. This approach helps when our component needs to extend some other base class.
+
+```ts
+@Component({
+    /* ... */,
+    providers: [NgtComponentStore]
+})
+export class CubeComponent extends SomeBaseClass {
+  constructor(private componentStore: NgtComponentStore) {
+    super();
+  }
+}
+```
+
+### Handling side-effects
+
+By just using `NgtComponentStore` without providing any type (`NgtComponentStore<SomeInterface>`), our `NgtComponentStore` does not hold any state. However, that does not mean that it cannot serve any purpose.
+
+If we just want to handle side-effects without manual subscription (eg: `.subscribe()`), then `NgtComponentStore` is enough.
+
+```ts
+@Component({
+    /* ... */
+})
+export class CubeComponent extends NgtComponentStore implements OnInit {
+    constructor(private store: NgtStore) {
+        super();
+    }
+
+    ngOnInit() {
+        // this.effect() returns a callable function.
+        this.effect<void>(
+            // 👇 can use any RxJS operator here.
+            tapEffect(() => {
+                // handle some side effect. For example, registering some before render callback
+                const unregister = this.store.registerBeforeRender({
+                    /* ... */
+                });
+
+                // 👇 clean up the effect
+                return () => {
+                    unregister();
+                };
+            })
+        )(); // 👈 don't forget to call the effect
+
+        // 👇 call the effect like any other function
+        this.registerBeforeRender();
+    }
+
+    // we can also make it a function for readability
+    private readonly registerBeforeRender = this.effect<void>(
+        tapEffect(() => {
+            // handle some side effect. For example, registering some before render callback
+            const unregister = this.store.registerBeforeRender({
+                /* ... */
+            });
+
+            // 👇 clean up the effect
+            return () => {
+                unregister();
+            };
+        })
+    );
+}
+```
+
+#### Effect with parameters
+
+Effects can also be triggered by some parameters.
+
+```ts
+@Component({
+    /* ... */
+})
+export class CubeComponent extends NgtComponentStore {
+    constructor(private store: NgtStore) {
+        super();
+    }
+
+    ngOnInit() {
+        //                        👇 reacts to size changes
+        const size$ = this.store.select((s) => s.size);
+
+        //                👇 Effect reacting to size$.
+        this.reactToSize(size$);
+        this.reactToSizeTwo(size$);
+    }
+
+    private readonly reactToSize = this.effect<NgtSize>(
+        tapEffect((size) => {
+            //      👆 we can have the Effect uses the Parameters
+            const { width, height } = size;
+            // do something with width, height
+
+            return () => {
+                // clean up as needed.
+                // This clean up function runs AFTER each time NgtSize changes and one FINAL time before the Component is destroyed
+            };
+        })
+    );
+
+    private readonly reactToSizeTwo = this.effect<{}>(
+        tapEffect(() => {
+            //                                  👇 or we can read it imperatively from the Source
+            const { width, height } = this.store.get((s) => s.size);
+            // do something with width, height
+
+            return () => {
+                // clean up as needed.
+            };
+        })
+    );
+}
+```
+
+### Managing component state
+
+We can tell `NgtComponentStore` what states we want it to manage by giving it an interface
+
+```ts
+interface CubeState {
+    prop1: string;
+    prop2: number;
+    prop3?: boolean;
+    prop4: Date;
+}
+
+@Component({
+    /*...*/
+})
+export class CubeComponent extends NgtComponentStore<CubeState> {
+    @Input() set prop1(prop1: string) {
+        // we can have Setter Input to bring the Input in our State
+        // This way, we can manage this Input reactively
+        this.set({ prop1 });
+    }
+
+    constructor() {
+        super();
+        this.set({
+            prop1: '',
+            prop2: 0,
+            // we skip prop3 before it's optional
+            // we skip prop4 on purpose
+        });
+    }
+
+    ngOnInit() {
+        this.get(); // returns { prop1: '', prop2: 0, prop3: undefined, prop4: undefined }
+        this.get((s) => s.prop1); // returns '';
+
+        this.select(); // Observable<CubeState>, subscribe to this yields { prop1: '', prop2: 0, prop3: undefined, prop4: undefined } at first
+
+        this.select((s) => s.prop1); // Observable<string>, subscribe to this yields '' at first
+
+        this.select((s) => s.prop3); // Observable<boolean | undefined>, subscribe to this yields nothing until we set prop3 the first time
+        this.select((s) => s.prop4); // Observable<Date>, subscribe to this yields nothing until we set prop4 the first time
+
+        this.select((s) => s.prop3).pipe(startWithUndefined()); // Observable<boolean | undefined>, subscribe to this yields "undefined" at first
+
+        this.select(
+            this.select((s) => s.prop1),
+            this.select((s) => s.prop2),
+            (prop1, prop2) => ({ prop1, prop2 }) // optional projectorFn
+        ); // Observable<{prop1: string, prop2: number}>, subscribe to this yields { prop1: '', prop2: 0 }
+
+        this.select(
+            this.select((s) => s.prop1),
+            this.select((s) => s.prop3), // or prop4, or any prop that hasn't been initialized with a default value
+            (prop1, prop3) => ({ prop1, prop3 })
+        ); // Observable<{prop1: string, prop3: boolean | undefined}>, subscribe to this yields nothing until we set prop3 the first time
+    }
+
+    //        👇 we can also create reusable selectors
+    readonly prop1$ = this.select((s) => s.prop1);
+    readonly prop1And2$ = this.select(
+        this.prop1$,
+        this.select((s) => s.prop2)
+    );
+}
+```
+
+:::tip
+
+[NGT EffectComposer](https://github.com/nartc/angular-three/blob/v5/libs/postprocessing/src/lib/effect-composer.ts) is a good example of using `NgtComponentStore`
+
+:::
+
+:::caution
+
+`NgtEffectComposer` extends [`NgtInstance`](./instance) and `NgtInstance` extends `NgtComponentStore` so technically, `NgtEffectComposer` also extends `NgtComponentStore`
+
+:::
+
+## API
+
+The API is almost identical to `@ngrx/component-store` with the following differences:
 
 ### `onCanvasReady`
 
@@ -22,8 +233,59 @@ this.select(
     this.select((s) => s.prop2),
     this.select((s) => s.prop3)
 ); // this is allowed
+
+// it is equivalent to
+this.select(
+    this.select((s) => s.prop1),
+    this.select((s) => s.prop2),
+    this.select((s) => s.prop3),
+    () => ({}) // empty object
+);
 ```
 
 ### `get()`
 
 `this.get()` is a `public` method instead of `protected`. This is because THREE.js is an imperative library. `get()` allows the objects to expose state in an imperative way (eg: in animation loop)
+
+### `tapEffect()`
+
+Similar to [RxJs tap operator](https://rxjs.dev/api/operators/tap) but `tapEffect()` runs a clean up function (if provided) everytime the Source emits and the last time when the Source completes
+
+```ts
+export class CubeComponent extends NgtComponentStore {
+    ngOnInit() {
+        this.runOnceAndCleanUpOnDestroy();
+
+        const every5Sec$ = timer(0, 5000);
+        this.runAndCleanUpEveryChanges(every5Sec$);
+    }
+
+    private readonly runOnceAndCleanUpOnDestroy = this.effect<void>(
+        tapEffect(() => {
+            const intervalSub = interval(1000).subscribe((tick) => {
+                console.log('Log every 1s: ' + tick);
+            });
+
+            return () => {
+                intervalSub.unsubscribe();
+            };
+        })
+    );
+
+    private readonly runAndCleanUpEveryChanges = this.effect<number>(
+        tapEffect(() => {
+            const intervalSub = interval(1000).subscribe((tick) => {
+                console.log('Log every 1s: ' + tick);
+            });
+
+            return () => {
+                intervalSub.unsubscribe();
+            };
+        })
+    );
+}
+```
+
+### `startWithUndefined()`
+
+Shortcut for [RxJs startWith operator](https://rxjs.dev/api/operators/startWith) with `undefined` value. This is useful for states that do not have initialized values but still need to participate in the stream with `undefined` values at first.
