Added missing code changes to render 2 cubes
In order to render two cubes in the scene it is necessary to add some lines of code to cube.component.html and cube.component.ts that were missing.

--- a/libs/documentations/docs/first-scene.mdx
+++ b/libs/documentations/docs/first-scene.mdx
@@ -590,6 +590,43 @@ Good. Now we can update our `app.component.html` to render another cube
 ```
 
 </TabItem>
+    
+<TabItem value="cubeTs" label="cube.component.ts">
+    
+```diff
+export class CubeComponent implements OnInit {
++ @Input('position') position? :NgtVector3;
+  hovered = false;
+  active = false;
+
+  onCubeBeforeRender($event: {state: NgtRenderState, object: Mesh}) {
+    const cube = $event.object;
+    cube.rotation.x += 0.01;
+    cube.rotation.y += 0.005
+  }
+}
+```
+    
+</TabItem>
+    
+<TabItem value="cubeHtml" value="cube.component.html">
+  
+```diff
+<ngt-mesh
+    (beforeRender)="onCubeBeforeRender($event)"
+    (click)="active = !active"
+    (pointerover)="hovered = true"
+    (pointerout)="hovered = false"
+    [scale]="active ? 1.5 : 1"
++   [position]="position">
+    <ngt-box-geometry></ngt-box-geometry>
+    <ngt-mesh-basic-material
+        [color]="hovered ? 'turquoise' : 'tomato'">
+    </ngt-mesh-basic-material>
+</ngt-mesh>
+```
+    
+</TabItem>
 
 </Tabs>
 
