docs: add link to andivr cannon examples; add performance page

--- a/libs/documentations/docs/cannon/overview.mdx
+++ b/libs/documentations/docs/cannon/overview.mdx
@@ -13,3 +13,7 @@ The same team [Poimandres](https://github.com/pmndrs) provides the [Web Worker v
 ```shell
 npm install @angular-three/cannon
 ```
+
+## References
+
+- Community member, [IRobot1](https://github.com/IRobot1), maintains a project where they re-create the [CannonES Examples](https://pmndrs.github.io/cannon-es/) using `@angular-three/cannon`. You can find the [project here](https://github.com/IRobot1/ng3-cannon-template) and the [live demo here](https://ng3cannon.z9.web.core.windows.net/)
