docs(core): fixed typo in ngt-primitive component
I have changed a typo in <ngt-primitive [object]="model.scene"></ngt-primitive>
because the letter
't' was missing

--- a/libs/documentations/docs/core/objects.mdx
+++ b/libs/documentations/docs/core/objects.mdx
@@ -144,8 +144,8 @@ More often than not, we want load 3D models from an external source and put them
   selector: 'some',
   template: `
     <ng-container *ngIf="model$ | async as model">
-                    <!-- 👇 NgtPrimitive exposes this object instead of itself like a NgtMesh -->
-      <ngt-primitive [object]="model.scene"></ng-primitive>
+      <!-- 👇 NgtPrimitive exposes this object instead of itself like a NgtMesh -->
+      <ngt-primitive [object]="model.scene"></ngt-primitive>
     </ng-container>
   `,
 })
